# amlogic-update

./: .gitignore  AmlLibusb.cpp  AmlLibusb.h  AmlTime.c  AmlTime.h  AmlUsbScanX3.cpp  AmlUsbScanX3.h  Amldbglog.cpp  Amldbglog.h  CMakeLists.txt  README.md  UsbRomDrv.cpp  UsbRomDrv.h  checksum.h  defs.h  gettime.h  scan.cpp  scan.h  simg_probe.cpp  simg_probe.h  update.cpp  update.hpp  usbcompat.c  usbcompat.h
AmlLibusb/: AmlLibusb.cpp  AmlLibusb.hpp
AmlUsbScan/: AmlUsbScan.cpp  AmlUsbScan.h
AmlUsbScanX3/: AmlUsbScanX3.cpp  AmlUsbScanX3.h
Amldbglog/: Amldbglog.cpp  Amldbglog.h
UsbRomDrv/: UsbRomDll.cpp  UsbRomDll.hpp  UsbRomDrv.cpp  UsbRomDrv.hpp
